<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_serious_label">Is serious</string>
    <string name="crime_title">Crime Title</string>
    <string name="crime_date">Crime Date</string>
    <string name="call_the_police">Call the police</string>
    <string name="calling_the_police">Calling the police…</string>
    <string name="new_crime">New Crime</string>
    <string name="crime_suspect_text">Suspect: %1$s</string>
    <string name="crime_choose_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s, %3$s and %4$s</string>
    <string name="crime_report_solved">The case is solved </string>
    <string name="crime_report_unsolved">The case is not solved </string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="crime_call_suspect_text">Call Suspect</string>
    <string name="crime_call_suspect_disabled_text">Choose suspect first to call it</string>
    <string name="crime_saved">Crime Saved</string>
    <string name="send_report">Send crime report via</string>
    <string name="no_crimes">No crimes yet.</string>
    <string name="tools_date">18 November 2022, 12:00</string>
</resources>